# VICENT

./: def capturar_rom_desde_arduino.txt
BNO055/Uppersense/: CMakeLists.txt  headerwidget.cpp  headerwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
BNO055/Uppersense/.qtcreator/: CMakeLists.txt.user.84094ac
BNO055/Uppersense/build-Desktop_Qt_6_10_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_excel_from_csvs.py  cmake_install.cmake  qtcsettings.cmake
BNO055/Uppersense/build-Desktop_Qt_6_10_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-8c86215f787ee9077699.json  cmakeFiles-v1-7a6c0bb810883cef43ea.json  (+5 more)
BNO055/Uppersense/build-Desktop_Qt_6_10_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
BNO055/Uppersense/build-Desktop_Qt_6_10_0_MinGW_64_bit-Debug/PacienteData/000000000/: 2025-11-25_14-16-06_Muñeca_Ej1.csv
BNO055/Uppersense/build-Desktop_Qt_6_10_0_MinGW_64_bit-Debug/PacienteData/0000000000/: Lecturas.xlsx
BNO055/Uppersense/build-Desktop_Qt_6_10_0_MinGW_64_bit-Debug/PacienteData/00000000000/: Lecturas.xlsx
BNO055/Uppersense/build-Desktop_Qt_6_10_0_MinGW_64_bit-Debug/PacienteData/000000000000/: Lecturas.xlsx
BNO055/Uppersense/build-Desktop_Qt_6_10_0_MinGW_64_bit-Debug/PacienteData/1109663998/: 2025-11-25_15-22-01_Muñeca_Ej1.csv  2025-11-25_15-40-20_Codo_y_Muñeca_Ej1.csv  2025-11-25_15-41-04_Codo_y_Muñeca_Ej2.csv  2025-11-25_15-41-42_Codo_y_Muñeca_Ej3.csv  2025-11-25_15-42-20_Codo_y_Muñeca_Ej4.csv  Lecturas.xlsx
BNO055/Uppersense/build-Desktop_Qt_6_10_0_MinGW_64_bit-Debug/PacienteData/111111111/: Lecturas.xlsx
BNO055/Uppersense/build-Desktop_Qt_6_10_0_MinGW_64_bit-Debug/Uppersense_autogen/: deps  mocs_compilation.cpp
BNO055/Uppersense/build-Desktop_Qt_6_10_0_MinGW_64_bit-Debug/Uppersense_autogen/EWIEGA46WW/: moc_headerwidget.cpp  moc_headerwidget.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
(+16 files in other folders)
